# zhuifan

./: .gitignore  README.md  config.example.yaml  config.yaml  pyproject.toml  requirements.txt  state.json
.github/workflows/: notifier.yml
anime_notifier/: __init__.py  __main__.py  config.py  notifier.py  scheduler.py  state.py
tests/: __init__.py  test_config.py  test_main.py  test_notifier.py  test_scheduler.py  test_state.py
